added 044C, automatic date time and icref
